@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2011, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -83,11 +83,12 @@ FSL_TEST_FUNCTION( url ) {
 
 
 #define QS_PARSE( str ) \
-    FSL_CHECK( fostlib::parse( (str), \
+    FSL_CHECK( fostlib::parse( lock, (str), \
             query_string_p[ phoenix::var( qs ) = phoenix::arg1 ] ).full ); \
     FSL_CHECK_EQ( qs.as_string().value(), \
             coerce< ascii_printable_string >(string(str)) );
 FSL_TEST_FUNCTION( query_string_parser ) {
+    fostlib::parser_lock lock;
     query_string_parser query_string_p;
 
     url::query_string qs;
@@ -117,10 +118,11 @@ FSL_TEST_FUNCTION( url_parser_protocol ) {
 
 
 #define URL_PARSE_HOSTPART( str, u_ ) \
-    FSL_CHECK( fostlib::parse( str, \
+    FSL_CHECK( fostlib::parse( lock, str, \
         url_hostpart_p[ phoenix::var( u ) = phoenix::arg1 ] ).full ); \
     FSL_CHECK_EQ( u.as_string(), u_.as_string() );
 FSL_TEST_FUNCTION( url_parser_hostpart ) {
+    fostlib::parser_lock lock;
     url_hostpart_parser url_hostpart_p;
 
     url u;
@@ -129,18 +131,19 @@ FSL_TEST_FUNCTION( url_parser_hostpart ) {
     URL_PARSE_HOSTPART( L"http://10.0.2.2", url( host( 10, 0, 2, 2 ) ) );
     URL_PARSE_HOSTPART( L"http://www.felspar.com", url( host( L"www.felspar.com" ) ) );
     URL_PARSE_HOSTPART( L"http://urquell-fn.appspot.com", url( host( L"urquell-fn.appspot.com" ) ) );
-    FSL_CHECK( !fostlib::parse( L"http://www..felspar.com/", url_hostpart_p ).full );
-    FSL_CHECK( !fostlib::parse( L"http://www./", url_hostpart_p ).full );
-    FSL_CHECK( !fostlib::parse( L"http://.www/", url_hostpart_p ).full );
+    FSL_CHECK( !fostlib::parse( lock, L"http://www..felspar.com/", url_hostpart_p ).full );
+    FSL_CHECK( !fostlib::parse( lock, L"http://www./", url_hostpart_p ).full );
+    FSL_CHECK( !fostlib::parse( lock, L"http://.www/", url_hostpart_p ).full );
     URL_PARSE_HOSTPART( L"http://123.45", url( host( L"123.45" ) ) );
     URL_PARSE_HOSTPART( L"http://12345", url( host( 12345 ) ) );
     URL_PARSE_HOSTPART( L"http://localhost:80", url( host( L"localhost", L"80" ) ) );
     URL_PARSE_HOSTPART( L"http://localhost:8080", url( host( L"localhost", L"8080" ) ) );
 }
 #define URL_PARSE_FILESPEC( str, s_ ) \
-    FSL_CHECK( fostlib::parse( str, url_filespec_p[ phoenix::var( s ) = phoenix::arg1 ] ).full ); \
+    FSL_CHECK( fostlib::parse( lock, str, url_filespec_p[ phoenix::var( s ) = phoenix::arg1 ] ).full ); \
     FSL_CHECK_EQ( s, ascii_printable_string( s_ ) )
 FSL_TEST_FUNCTION( url_parser_filespec ) {
+    fostlib::parser_lock lock;
     url_filespec_parser url_filespec_p;
 
     ascii_printable_string s;
